# whisper-job-manager

./: Dockerfile  README.md
whisper-job-manager/: .gitignore  Cargo.toml  config.json
whisper-job-manager-cli/: Cargo.toml
whisper-job-manager-cli/src/: args.rs  main.rs
whisper-job-manager-models/: .gitignore  Cargo.toml
whisper-job-manager-models/src/: job_metadata.rs  job_status.rs  lib.rs
whisper-job-manager/src/: config.rs  constants.rs  main.rs
whisper-job-manager/src/routes/: cancel_job.rs  get_all_statuses.rs  get_job.rs  get_status.rs  mod.rs  new_job.rs
whisper-job-manager/src/scheduler/: mod.rs  strategy.rs
