[package]
name = "whisper-job-manager-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper-job-manager-models = { path = "../whisper-job-manager-models" }
clap = { version = "4.4.13", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.0"
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}