[package]
name = "whisper-job-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
actix-files = "0.6.2"
actix-web = "4"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.110"
uuid = {version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
lazy_static = "1.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.77"
async-trait = "0.1.75"